--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(45deg, #3a7bd5, #00d2ff);
+  font-family: 'Open Sans', sans-serif;
+  background: url('../assets/loginBackground.svg');
+  background-size: cover;
+  background-color: #adf;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,8 +12,13 @@ body {
   color: rgb(230, 230, 230);
 }
 
+p, label, input {
+  font-weight: 500;
+  font-size: 1rem;
+}
+
 .destacado {
-  color: rgb(200, 200, 255);
+  color: #22a;
   text-decoration: underline;
 }
 
